--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.2.2",
     "lucide-react": "^0.360.0",
     "next": "14.1.4",
     "react": "^18",
