--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@headlessui/react": "^2.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@reduxjs/toolkit": "^2.2.2",
+    "@vercel/postgres": "^0.8.0",
     "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "framer-motion": "^11.2.2",
     "lucide-react": "^0.360.0",
     "next": "14.1.4",
+    "pg": "^8.11.5",
+    "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
@@ -27,6 +31,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
